AB Test setup in scala

--- a/applications/app/views/fragments/mediaBody.scala.html
+++ b/applications/app/views/fragments/mediaBody.scala.html
@@ -40,7 +40,7 @@
                                             )
                                         }
 
-                                        <figure data-component="main audio">
+                                        <figure data-component="main audio old-player">
                                         @audio.elements.mainAudio.map { audioElement =>
                                             @fragments.media.audio(
                                                 AudioPlayer(
