--- a/static/src/stylesheets/module/content-garnett/_media.global.scss
+++ b/static/src/stylesheets/module/content-garnett/_media.global.scss
@@ -1,5 +1,61 @@
 @import '../social-icons';
 
+
+/* new audio styles hacked in for test page */
+
+.content--media.new-audio {
+
+    * {
+        box-sizing: border-box;
+    }
+    ul {
+        margin: 0;
+        list-style-type: none;
+        line-height: 1.5rem;
+        img {
+            display: inline-block;
+        }
+    }
+
+    h1, h2, h3, li, p {
+        color: #dcdcdc;
+    }
+    .player {
+        line-height: 0;
+        .inline-download {
+            svg {
+                width: auto;
+                height: auto;
+            }
+        }
+    }
+
+    @media (max-width: 46.24em) {
+        .player {
+            margin-left: 0rem;
+        }
+    }
+
+    @media (min-width: 71.25em) {
+        .player {
+            margin-left: -10rem;
+        }
+        .content__meta-container {
+            top: auto;
+        }
+    }
+    @media (min-width: 81.25em) {
+        .player {
+            margin-left: -15rem;
+        }
+    }
+
+}
+
+
+/* original styles */
+
+
 .content--media {
     .content__main-column {
         &::before {
